@@ -1,4 +1,6 @@
-# $Id: Makefile,v 1.1 2005/04/29 12:56:05 abs Exp $
+# $Id: Makefile,v 1.2 2005/05/01 22:03:37 abs Exp $
+
+VERSION=0.87
 
 PREFIX?=/usr/local
 OPSYS?=`uname`
@@ -12,7 +14,7 @@ all:
 	sed -e 's|@PREFIX@|${PREFIX}|g' cpuflags.mk > cpuflags.mk.out
 	
 clean:
-	rm -f *.out
+	rm -rf *.out out
 
 install:
 	mkdir -p ${BINDIR} ${MANDIR} ${MKDIR}
@@ -20,3 +22,11 @@ install:
 	install cpuflags.1.out 	  ${MANDIR}/cpuflags.1
 	install optimize_gcc.mk   ${MKDIR}/optimize_gcc.mk
 	install cpuflags.mk.out   ${MKDIR}/cpuflags.mk
+
+dist:
+	mkdir -p out/cpuflags-${VERSION}
+	cp Makefile *.* out/cpuflags-${VERSION}
+	(cd out;pax -w cpuflags-${VERSION} | bzip2 -9 > cpuflags-${VERSION}.tbz)
+	rm -rf out/cpuflags-${VERSION}
+
+
