@@ -1,5 +1,5 @@
 #!/bin/sh
-# $NetBSD: cpuflags.SunOS,v 1.6 2004/12/22 15:12:18 abs Exp $
+# $NetBSD: cpuflags.SunOS,v 1.7 2005/05/01 22:03:37 abs Exp $
 PATH=/sbin:/usr/sbin:/bin:/usr/bin:$PATH
 
 AWK=nawk
@@ -41,7 +41,7 @@ if [ -n "$opt_v" ] ; then
     exit
 fi
 if [ -z "$FLAGS" -a -z "$NONE" ] ; then
-    echo 'Unknown machine - please send details to abs@netbsd.org'	>&2
+    echo 'Unknown machine - please send details to abs@absd.org'	>&2
     display_hw_details							>&2
 fi
 
